--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "logitrack-dashboard",
   "version": "1.0.0",
@@ -9,22 +8,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "firebase": "^10.8.0",
-    "exceljs": "^4.4.0",
-    "xlsx": "^0.18.5",
-    "jspdf": "^2.5.1",
-    "html2canvas": "^1.4.1",
+    "canvas-confetti": "^1.9.2",
     "chart.js": "^4.4.1",
+    "exceljs": "^4.4.0",
+    "firebase": "^12.8.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.0.0",
+    "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "canvas-confetti": "^1.9.2"
+    "react-dom": "^18.2.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.1.0",
-    "typescript": "^5.3.3"
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19",
+    "typescript": "^5.3.3",
+    "vite": "^7.3.1"
   }
 }
