--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^4.4.1",
     "exceljs": "^4.4.0",
     "firebase": "^12.8.0",
+    "framer-motion": "^12.29.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^4.0.0",
     "react": "^18.2.0",
